--- a/app/manifest.json
+++ b/app/manifest.json
@@ -2,7 +2,7 @@
   "name": "AWS SAML Keys",
   "version": "1.0.2",
   "manifest_version": 2,
-  "description": "Generate temporary AWS access keys from a SAML login to the AWS console.",
+  "description": "Generate AWS access keys from a SAML login to the AWS console.",
   "icons": { 
     "16": "img/key16.png",
     "48": "img/key48.png",
